	ipmi_lan_check_packet_session_authentication_code.

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (_ipmi_lan_cmd_recv),
	ipmipower/src/ipmipower_powercmd.c (_recv_packet): Adjust for
	ipmi_lan_check_checksum function name change.

	* libfreeipmi/src/ipmi-lan-utils.c,
	libfreeipmi/include/freeipmi/ipmi-lan-utils.h
	(ipmi_lan_check_session_authentication_code): New function.

2006-03-10  Anand Babu  <ab@zresearch.com>

	* configure.ac: Applied Anand Avati's <avati@zresearch.com>
	patch to check installed Guile's version. Replaced gh_enter with
	scm_boot_guile. gh_* are depricated in Guile 1.8. 

2005-03-10  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-cipher-suite-spec.c: New file.

2005-03-09  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Remove randomized initial outbound sequence number.
	Add support of IPMI 2.0 for chassis status and chassis control.
	Add sequence number support for IPMI 2.0 session packets.

	* libfreeipmi/include/freeipmi/ipmi-cipher-suite-spec.h: Add
	cipher suite combination validity checks.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c (_calculate_k_rakp_none):
	Removed function.
	
	* libfreeipmi/src/ipmi-rmcpplus-utils.c (ipmi_calculate_sik,
	_ipmi_calculate_k): Fix parameter checks to return errors for
	invalid cipher combinations.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.c
	(ipmi_rmcpplus_check_rakp_message_2_key_exchange_authentication_code,
	ipmi_calculate_rakp_3_key_exchange_authentication_code): Rename
	variables to match ipmi spec.

	* libfreeipmi/src/ipmi-messaging-support-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h
	(tmpl_cmd_get_channel_cipher_suites_rs): New template supported.

	* ipmipower/src/ipmipower_packet.c (_ipmi_1_5_packet_create,
	_ipmi_2_0_packet_create): New functions.
	
	* ipmipower/src/ipmipower_packet.c (ipmipower_packet_create): Use
	new functions and cleanup code a lot.
	
	* libfreeipmi/include/freeipmi/ipmi-lan-param-spec.h,